--- a/content/themes/ocooking/package.json
+++ b/content/themes/ocooking/package.json
@@ -30,6 +30,9 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "file-loader": "^4.2.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "webpack-build-notifier": "^2.0.0"
   }
 }
