--- a/content/themes/ocooking/package.json
+++ b/content/themes/ocooking/package.json
@@ -30,9 +30,11 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "file-loader": "^4.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.16.0",
     "webpack-build-notifier": "^2.0.0"
   }
 }
