--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "johnpbloch/wordpress": "^5.2",
         "wpackagist-theme/twentynineteen":"1.4",
-        "wpackagist-plugin/advanced-custom-fields":"5.8.6"
+        "wpackagist-plugin/advanced-custom-fields":"5.8.6",
+        "wpackagist-plugin/user-role-editor":"4.52"
     },
     "require-dev": {
         "wpackagist-plugin/query-monitor":"3.4.0",
